Added plurals for Token / Coupon / Magipoint

--- a/Translation/general.json
+++ b/Translation/general.json
@@ -71,6 +71,24 @@
 		"th": "",
 		"id": "",
 	},
+  "general.CURRENCY.TOKENS":{
+    "en": "Tokens",
+    "fr": "Jetons",
+    "es": "",
+    "ch": "",
+    "kr": "",
+    "ru": "",
+    "tr": "",
+    "de": "",
+    "ja": "",
+    "pt": "",
+    "vi": "",
+    "ar": "",
+    "it": "",
+    "pl": "",
+    "th": "",
+    "id": "",
+  },
 	"general.CURRENCY.COUPON":{
 		"en": "Coupon",
 		"fr": "Coupon",
@@ -89,6 +107,24 @@
 		"th": "",
 		"id": "",
 	},
+  "general.CURRENCY.COUPONS":{
+    "en": "Coupons",
+    "fr": "Coupons",
+    "es": "",
+    "ch": "",
+    "kr": "",
+    "ru": "",
+    "tr": "",
+    "de": "",
+    "ja": "",
+    "pt": "",
+    "vi": "",
+    "ar": "",
+    "it": "",
+    "pl": "",
+    "th": "",
+    "id": "",
+  },
 	"general.POINT.EXP":{
 		"en": "Exp",
 		"fr": "Exp",
@@ -109,7 +145,7 @@
 	},
 	"general.POINT.MAGIPOINT":{
 		"en": "Magipoint",
-		"fr": "",
+		"fr": "Point de magie",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -125,6 +161,24 @@
 		"th": "",
 		"id": "",
 	},
+  "general.POINT.MAGIPOINTS":{
+    "en": "Magipoints",
+    "fr": "Points de magie",
+    "es": "",
+    "ch": "",
+    "kr": "",
+    "ru": "",
+    "tr": "",
+    "de": "",
+    "ja": "",
+    "pt": "",
+    "vi": "",
+    "ar": "",
+    "it": "",
+    "pl": "",
+    "th": "",
+    "id": "",
+  },
 	"general.quest.getReward":{
 		"en": "Get Reward",
 		"fr": "Obtenir la récompense",
