--- a/Translation/general.json
+++ b/Translation/general.json
@@ -145,7 +145,7 @@
 	},
 	"general.POINT.MAGIPOINT":{
 		"en": "Magipoint",
-		"fr": "Point de magie",
+		"fr": "Magie noire",
 		"es": "",
 		"ch": "",
 		"kr": "",
