--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -955,4 +955,148 @@
 		"th": "",
 		"id": "",
 	},
+	"UI.windows.quest-list.title":{
+		"en": "Quest",
+		"fr": "Quêtes",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "Quests",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest-list.tab.growth":{
+		"en": "Growth",
+		"fr": "Croissance",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest-list.tab.available":{
+		"en": "Available",
+		"fr": "Disponible",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest.type.main":{
+		"en": "Main Quest",
+		"fr": "Quête Principale",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest.type.secondary":{
+		"en": "Secondary Quest",
+		"fr": "Quête Secondaire",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest.type.talent":{
+		"en": "Talent Quest",
+		"fr": "Quête de Talent",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest.type.daily":{
+		"en": "Daily Quest",
+		"fr": "Quête journ.",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest.type.guild":{
+		"en": "Guild Quest",
+		"fr": "Quête de Guilde",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 }
