--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -171,7 +171,7 @@
 		"kr": "",
 		"ru": "Жизни",
 		"tr": "",
-		"de": "",
+		"de": "LP",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -189,7 +189,7 @@
 		"kr": "",
 		"ru": "Мана",
 		"tr": "",
-		"de": "",
+		"de": "MP",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -207,7 +207,7 @@
 		"kr": "",
 		"ru": "ОПТ",
 		"tr": "",
-		"de": "",
+		"de": "EXP",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -225,7 +225,7 @@
 		"kr": "",
 		"ru": "Скорость",
 		"tr": "",
-		"de": "",
+		"de": "Geschw.",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -261,7 +261,7 @@
 		"kr": "공격",
 		"ru": "АТК",
 		"tr": "",
-		"de": "",
+		"de": "ANG",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -279,7 +279,7 @@
 		"kr": "방어",
 		"ru": "Защита",
 		"tr": "",
-		"de": "",
+		"de": "VER",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -981,7 +981,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Wachstum",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -999,7 +999,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Verfügbar",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -1017,7 +1017,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Hauptquest",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -1035,7 +1035,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Zweitquests",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -1053,7 +1053,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Talentquest",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -1071,7 +1071,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Tägliches Quest",
 		"ja": "",
 		"pt": "",
 		"vi": "",
@@ -1089,7 +1089,7 @@
 		"kr": "",
 		"ru": "",
 		"tr": "",
-		"de": "",
+		"de": "Gildenquest",
 		"ja": "",
 		"pt": "",
 		"vi": "",
