--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1009,6 +1009,24 @@
 		"th": "",
 		"id": "",
 	},
+	"UI.windows.quest-list.objective":{
+		"en": "Objective",
+		"fr": "Objectif",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 	"UI.windows.quest.type.main":{
 		"en": "Main Quest",
 		"fr": "Quête Principale",
