--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1027,6 +1027,24 @@
 		"th": "",
 		"id": "",
 	},
+	"UI.windows.quest-list.done":{
+		"en": "DONE",
+		"fr": "TERMIER",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 	"UI.windows.quest.type.main":{
 		"en": "Main Quest",
 		"fr": "Quête Principale",
