--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1010,8 +1010,44 @@
 		"id": "",
 	},
 	"UI.windows.quest-list.objective":{
-		"en": "Objective",
+		"en": "Quest Objective",
 		"fr": "Objectif",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest-list.reward":{
+		"en": "Quest Reward",
+		"fr": "Récompense",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.quest-list.description":{
+		"en": "Quest Description",
+		"fr": "Description",
 		"es": "",
 		"ch": "",
 		"kr": "",
