--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1171,4 +1171,94 @@
 		"th": "",
 		"id": "",
 	},
+	"UI.windows.character.title":{
+		"en": "Character",
+		"fr": "Personnage",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.character.tab.gear":{
+		"en": "Gear",
+		"fr": "Equipement",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.character.tab.blessing":{
+		"en": "Blessing",
+		"fr": "Bénédiction",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.character.tab.valor":{
+		"en": "Valor",
+		"fr": "Valeur",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"UI.windows.character.tab.element":{
+		"en": "Element",
+		"fr": "Élément",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 }
