--- a/Translation/general.json
+++ b/Translation/general.json
@@ -269,4 +269,94 @@
 		"th": "",
 		"id": "",
 	},
+	"general.level":{
+		"en": "Level",
+		"fr": "Niveau",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"general.level.short":{
+		"en": "Lv.",
+		"fr": "Nv.",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"general.bind.boe":{
+		"en": "Bind on Equip",
+		"fr": "Lié quand Équipé",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"general.bind.bop":{
+		"en": "Bind on Pickup",
+		"fr": "Lié quand Ramassé",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"general.bind.bound":{
+		"en": "Bound",
+		"fr": "Lié",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 }
