--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -17,4 +17,40 @@
 		"th": "",
 		"id": "",
 	},
+	"tooltip.item.class":{
+		"en": "Required Class",
+		"fr": "Classe Requise",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"tooltip.item.level":{
+		"en": "Required Lv",
+		"fr": "Niveau Requis",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 }
