--- a/Translation/general.json
+++ b/Translation/general.json
@@ -269,6 +269,42 @@
 		"th": "",
 		"id": "",
 	},
+	"general.gender.m":{
+		"en": "M",
+		"fr": "H",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
+	"general.gender.w":{
+		"en": "F",
+		"fr": "F",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 	"general.level":{
 		"en": "Level",
 		"fr": "Niveau",
