--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -35,6 +35,24 @@
 		"th": "",
 		"id": "",
 	},
+	"tooltip.item.gender":{
+		"en": "Required Gender",
+		"fr": "Genre Requis",
+		"es": "",
+		"ch": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"ja": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": "",
+	},
 	"tooltip.item.level":{
 		"en": "Required Lv",
 		"fr": "Niveau Requis",
