--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1528,5 +1528,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+	"UI.windows.bag.button.locked":{
+        "en":"[Lock]",
+        "fr":"[Verr]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "ja":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
